--- a/my-portfolio/public/index.html
+++ b/my-portfolio/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- ... (other head elements) ... -->
-    <title>My Portfolio</title>
+    <title>Ahnaf Habib Khan</title>
   </head>
   <body>
     <div id="root">
